Updates to the latest version of Jira 7.8.2
Updated the Dockerfile and docker-compose to run the latest version of Jira 7.8.2 that's available for download as of Aplir 4, 2018